--- a/src/components/DemoDisplayer/DemoDisplayer.module.css
+++ b/src/components/DemoDisplayer/DemoDisplayer.module.css
@@ -1,5 +1,5 @@
 .toogleButton {
-  font-size: 1.5rem;
+  font-size: 2rem;
   padding: 1.5rem;
   position: absolute;
   right: 0;
@@ -61,7 +61,7 @@
 }
 
 div:has(> .demoBox) {
-  padding: 0 1rem;
+  padding: 1rem;
   max-width: 25%;
   transition: var(--fast-transition) var(--default-animation);
 }
@@ -100,4 +100,16 @@ div:has(> .demoBox) {
 
 .demoBox > div > button svg {
   font-size: 0.75rem;
+}
+
+@media (max-width: 1023px) {
+  .toogleButton {
+    top: 0;
+    bottom: unset;
+    padding: 1rem;
+  }
+
+  div:has(> .demoBox) {
+    max-width: 50%;
+  }
 }
